--- a/blogDemo/css/index/index.css
+++ b/blogDemo/css/index/index.css
@@ -1,3 +1,8 @@
+a{
+    text-decoration: none;
+    color: white;
+}
+
 .main{
     width: 100%;
     height: 100%;
@@ -6,29 +11,99 @@
 }
 
 .topLeft{
-    width: 15%;
+    width: 20%;
     height: 70px;
     float: left;
     background-color:rgb(233,233,233);
 }
 
 .topRight{
-    width: 85%;
+    width: 80%;
     height: 70px;
     float: left;
     background-color: white;
 }
 
 .bottomLeft{
-    width: 15%;
+    width: 20%;
     height: 100%;
     float: left;
     background-color:rgb(35,39,49);
 }
 
 .bottomRight{
-    width: 85%;
+    width: 80%;
     height: 100%;
     float: left;
     background-color:rgb(243,242,242);
 }
+
+.logo,.nav{
+    margin: 0 auto; /* 与外界元素的距离为0 */
+    padding: 0; /* 与内部元素的距离为0 */
+    height: 50px;
+}
+.nav{
+    height: 50px;
+}
+
+.logoBox{
+    display: block;
+    width:70px;
+    height: 70px;
+    text-align: center;
+    line-height: 70px;
+    float: left;
+}
+
+.logoImg{
+    width: 50px;
+    height: 50px;
+    vertical-align: middle;
+    padding-top:10px;
+}
+
+.logoTitle{
+    display: block;
+    height: 70px;
+    width: auto;
+    font-size: 24px;
+    line-height: 70px;
+    vertical-align: middle;
+    text-align: left;
+    float: left;
+    color: black;
+}
+
+.nav:hover{
+    background-color: darkturquoise;
+    color: white;
+}
+
+.navImgBox{
+    display: block;
+    width:80px;
+    height: 50px;
+    text-align: center;
+    line-height: 48px;
+    float: left;
+}
+.navImg{
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    vertical-align: middle;
+    padding-top:15px;
+}
+
+.navTitle{
+    display: block;
+    height: 50px;
+    width: auto;
+    font-size: 16px;
+    line-height: 50px;
+    vertical-align: middle;
+    text-align: left;
+    float: left;
+}
+
